--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="container" id="container">
-            
+            <p>by EmmaKingDev</p>
         </div>
         <script src="script.js"></script>
     </body>
