--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     </head>
     <body>
         <div class="container" id="container">
-            <p>by EmmaKingDev</p>
+       
         </div>
+        <p style="color:white;">by EmmaKingDev</p>
         <script src="script.js"></script>
     </body>
 </html>
